# URLsGPT

./: .gitignore  .tmux_manager.sh  README.md  pyproject.toml  urls-gpt.service
src/: main.py
