[project]
name = "urlsgpt"
version = "0.1.0"
description = "Paste URLs to websites and ask questions about them."
authors = [
    {name = "Riju",email = "mailmeonriju@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-ollama (>=0.2.2,<0.3.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
